--- a/osa2/puhelinluettelo/src/index.css
+++ b/osa2/puhelinluettelo/src/index.css
@@ -3,8 +3,8 @@
 	color: white;
 	border-radius: 20px;
 
-	padding: 0 10px;
-	margin: 10px 0;
+	padding: 10px;
+	margin: 0 0 20px;
 	width: fit-content;
 }
 
@@ -13,7 +13,7 @@
 	color: white;
 	border-radius: 20px;
 
-	padding: 0 10px;
-	margin: 10px 0;
+	padding: 10px;
+	margin: 0 0 20px;
 	width: fit-content;
 }
